# adventofcode

./: CMakeLists.txt  README.md
2019/aoc-2/: Cargo.toml
2019/aoc-3/: Cargo.toml
2019/aoc-4/: Cargo.toml
2020/1/: solve.py  solve3.py
2020/10/: solve.py  solve1.py  solve2.py
2020/11/: solve.py  solve2.py
2020/12/: solve.py  solve2.py
2020/13/: solve.py  solve2.py
2020/14/: solve.py  solve2.py
2020/15/: solve.py
2020/16/: solve.py  solve2.py
2020/17/: solve.py  solve2.py
2020/18/: solve.py  solve2.py
2020/19/: solve.py
2020/2/: solve.py  solve2.py
2020/20/: solve.py  tmp.py
2020/21/: solve.py
2020/22/: solve.py  solve2.py
2023/: CMakeLists.txt
2023/aoc-01/: CMakeLists.txt  aoc-01.cpp  aoc-01.h
2023/aoc-02/: CMakeLists.txt  aoc-02.cpp
2023/aoc-03/: CMakeLists.txt  aoc-03.cpp
2023/aoc-04/: CMakeLists.txt  aoc-04.cpp
2023/aoc-05/: CMakeLists.txt  aoc-05.cpp
2023/aoc-06/: CMakeLists.txt  aoc-06.cpp
2023/aoc-07/: CMakeLists.txt  aoc-07.cpp
2023/aoc-08/: CMakeLists.txt  aoc-08.cpp
2023/aoc-09/: CMakeLists.txt  aoc-09.cpp
2023/aoc-10/: CMakeLists.txt  aoc-10.cpp
2023/aoc-11/: CMakeLists.txt  aoc-11.cpp
2023/aoc-12/: CMakeLists.txt  aoc-12.cpp
2023/aoc-13/: CMakeLists.txt  aoc-13.cpp
2023/aoc-14/: CMakeLists.txt  aoc-14.cpp
2023/aoc-15/: CMakeLists.txt  aoc-15.cpp  input.txt
2023/aoc-16/: CMakeLists.txt  aoc-16.cpp
2023/aoc-19/: CMakeLists.txt  aoc-19.cpp
2023/aoc-20/: CMakeLists.txt  aoc-20.cpp  input.txt
2023/lib/: CMakeLists.txt  case.cpp  case.h  ranges.h  streamhelpers.h  strings.cpp  strings.h
(+138 files in other folders)
