add_subdirectory ("lib")
add_subdirectory ("aoc-01")
add_subdirectory ("aoc-02")
add_subdirectory ("aoc-03")
add_subdirectory ("aoc-04")
add_subdirectory ("aoc-05")
add_subdirectory ("aoc-06")
add_subdirectory ("aoc-07")
add_subdirectory ("aoc-08")
add_subdirectory ("aoc-09")
add_subdirectory ("aoc-10")
